--- a/proposal.html
+++ b/proposal.html
@@ -14,6 +14,12 @@
   <h1 id="aileron-proposal">
    Aileron Proposal
   </h1>
+  <p>
+   Blog site:
+   <a href="https://aileron742638168.wordpress.com/?frame-nonce=a4b5edb8f5">
+    https://aileron742638168.wordpress.com/?frame-nonce=a4b5edb8f5
+   </a>
+  </p>
   <h2 id="overview">
    Overview
   </h2>
@@ -41,10 +47,10 @@
    </a>
   </p>
   <p>
-   Progress as of 9/13/2019
+   Progress as of 9/16/2019
   </p>
   <p>
-   <img alt="" src="./demo0.gif"/>
+   <img alt="" src="./demo2.gif"/>
   </p>
   <h4 id="narrative-arc">
    Narrative arc
@@ -70,6 +76,9 @@
   <p>
    PC: Windows, Linux, Mac
   </p>
+  <p>
+   Game Controls: Regular arrow keys, WASD and game controller.
+  </p>
   <h2 id="plan-for-art-and-audio-content-for-the-game">
    Plan for art and audio content for the game
   </h2>
@@ -79,6 +88,41 @@
     https://opengameart.org/
    </a>
   </p>
+  <p>
+   <img alt="" src="./Ship1.jpg"/>
+  </p>
+  <p>
+   <img alt="" src="./Ship2.jpg"/>
+  </p>
+  <p>
+   <img alt="" src="./GreenPas.jpg"/>
+  </p>
+  <p>
+   <img alt="" src="./Space1.jpg"/>
+  </p>
+  <p>
+   <img alt="" src="./Space2.jpg"/>
+  </p>
+  <p>
+   Here is what we currently have for our desert scene.
+  </p>
+  <p>
+   <img alt="" src="./Overview.png"/>
+  </p>
+  <p>
+   <img alt="" src="./Sneakpeek.png"/>
+  </p>
+  <ul>
+   <li>
+    Synthesizer heavy soundtracks.
+   </li>
+   <li>
+    Repetitive synthesizers for battle music (du du du, wa wa wa).
+   </li>
+   <li>
+    Dirty synths that slap hard for boss music.
+   </li>
+  </ul>
   <h2 id="division-of-labor">
    Division of labor
   </h2>
@@ -89,7 +133,7 @@
    Ross: 3D models, programming, administrative
   </p>
   <p>
-   Zach: Website
+   Zach: Website, programming
   </p>
   <p>
    Jordan: programming, audio, sound effects
@@ -148,6 +192,9 @@
    </li>
    <li>
     Win/Loss state (1 Objective)
+   </li>
+   <li>
+    1 weapon type
    </li>
   </ul>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/highlight.min.js">
