added gun gif, updated roles
Former-commit-id: de73ffdf73acdc33c1601d5af77c7da5e2fbd965

--- a/proposal.html
+++ b/proposal.html
@@ -11,8 +11,8 @@
   </style>
  </head>
  <body>
-  <h1 id="aileron-proposal">
-   Aileron Proposal
+  <h1 id="team-13-aileron-proposal">
+   Team 13: Aileron Proposal
   </h1>
   <p>
    Blog site:
@@ -70,6 +70,23 @@
   <p>
    4: Attack alien mothership
   </p>
+  <h4 id="styletheme">
+   Style/theme
+  </h4>
+  <ul>
+   <li>
+    sci-fi
+   </li>
+   <li>
+    militaristic
+   </li>
+   <li>
+    low poly no/minimal texture
+   </li>
+   <li>
+    horrors from another dimension
+   </li>
+  </ul>
   <h2 id="platforms">
    Platforms
   </h2>
@@ -126,18 +143,245 @@
   <h2 id="division-of-labor">
    Division of labor
   </h2>
-  <p>
-   Morgan: Textures, music, backgrounds
-  </p>
-  <p>
-   Ross: 3D models, programming, administrative
-  </p>
-  <p>
-   Zach: Website, programming
-  </p>
-  <p>
-   Jordan: programming, audio, sound effects
-  </p>
+  <h3 id="enemies">
+   Enemies
+  </h3>
+  <ul>
+   <li>
+    <p>
+     giant ground insect? (jordan)
+    </p>
+    <ul>
+     <li>
+      behavior [AI]
+     </li>
+     <li>
+      attack
+     </li>
+     <li>
+      movement
+     </li>
+     <li>
+      model
+     </li>
+     <li>
+      animation
+     </li>
+    </ul>
+   </li>
+   <li>
+    <p>
+     flying (ross)
+    </p>
+    <ul>
+     <li>
+      behavior [AI]
+     </li>
+     <li>
+      attack
+     </li>
+     <li>
+      movement
+     </li>
+     <li>
+      animation
+     </li>
+     <li>
+      model
+     </li>
+    </ul>
+   </li>
+  </ul>
+  <h3 id="friends">
+   Friends
+  </h3>
+  <ul>
+   <li>
+    moon railgun
+    <ul>
+     <li>
+      behavior [AI]
+     </li>
+     <li>
+      attack
+     </li>
+     <li>
+      movement
+     </li>
+     <li>
+      animation
+     </li>
+     <li>
+      model
+     </li>
+    </ul>
+   </li>
+   <li>
+    tanks
+    <ul>
+     <li>
+      behavior [AI]
+     </li>
+     <li>
+      attack
+     </li>
+     <li>
+      movement
+     </li>
+     <li>
+      animation
+     </li>
+     <li>
+      model
+     </li>
+    </ul>
+   </li>
+  </ul>
+  <h3 id="player-ship">
+   Player Ship
+  </h3>
+  <ul>
+   <li>
+    3d model (ross)
+   </li>
+   <li>
+    movement (ross)
+   </li>
+   <li>
+    Weapons
+    <ul>
+     <li>
+      gun (jordan)
+     </li>
+     <li>
+      bomb
+     </li>
+     <li>
+      railgun
+     </li>
+     <li>
+      missile
+     </li>
+    </ul>
+   </li>
+   <li>
+    effects (jordan)
+   </li>
+   <li>
+    collision (ross)
+    <ul>
+     <li>
+      subtract hp on collision
+     </li>
+    </ul>
+   </li>
+  </ul>
+  <h3 id="level-design">
+   Level design
+  </h3>
+  <ul>
+   <li>
+    objectives (morgan)
+    <ul>
+     <li>
+      level 1
+     </li>
+     <li>
+      level 2
+     </li>
+     <li>
+      level 3
+     </li>
+     <li>
+      level 4
+     </li>
+    </ul>
+   </li>
+   <li>
+    environment (morgan)
+    <ul>
+     <li>
+      city
+     </li>
+     <li>
+      forest
+     </li>
+     <li>
+      moon
+     </li>
+     <li>
+      orbit
+     </li>
+    </ul>
+   </li>
+  </ul>
+  <h3 id="story-zach">
+   Story (zach)
+  </h3>
+  <ul>
+   <li>
+    Characters
+   </li>
+   <li>
+    narration
+   </li>
+   <li>
+    plot
+   </li>
+  </ul>
+  <h3 id="progression">
+   Progression
+  </h3>
+  <ul>
+   <li>
+    weapon unlocks (Jordan)
+   </li>
+  </ul>
+  <h3 id="hudui">
+   hud/ui
+  </h3>
+  <ul>
+   <li>
+    weapon aim reticle
+   </li>
+   <li>
+    objective markers
+   </li>
+   <li>
+    Mini map (Zach)
+   </li>
+  </ul>
+  <h3 id="misc">
+   Misc
+  </h3>
+  <ul>
+   <li>
+    power ups
+   </li>
+   <li>
+    menu
+    <ul>
+     <li>
+      pause
+     </li>
+     <li>
+      save
+     </li>
+     <li>
+      quit
+     </li>
+    </ul>
+   </li>
+   <li>
+    lighting
+   </li>
+   <li>
+    website (Zach)
+   </li>
+   <li>
+    administration (Ross)
+   </li>
+  </ul>
   <h2 id="schedule">
    Schedule
   </h2>
@@ -192,9 +436,6 @@
    </li>
    <li>
     Win/Loss state (1 Objective)
-   </li>
-   <li>
-    1 weapon type
    </li>
   </ul>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/highlight.min.js">
